--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@rollup/plugin-node-resolve": "^11.2.1",
         "husky": "^6.0.0",
         "lint-staged": "^10.5.4",
+        "lodash": "^4.17.21",
+        "plop": "^2.7.4",
         "prettier": "^2.2.1",
         "rollup": "^2.46.0"
     },
@@ -20,7 +22,8 @@
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "gen": "plop"
     },
     "main": "dist/blockly-playwright.cjs.js",
     "module": "dist/blockly-playwright.esm.js",
