--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "lodash": "^4.17.21",
         "plop": "^2.7.4",
         "prettier": "^2.2.1",
-        "rollup": "^2.46.0"
+        "rollup": "^2.46.0",
+        "rollup-plugin-copy": "^3.4.0",
+        "rollup-plugin-serve": "^1.1.0"
     },
     "files": [
         "dist"
@@ -29,7 +31,8 @@
     "module": "dist/blockly-playwright.esm.js",
     "browser": "dist/blockly-playwright.umd.js",
     "dependencies": {
-        "blockly": "^5.20210325.1"
+        "blockly": "^5.20210325.1",
+        "rollup-plugin-terser": "^7.0.2"
     },
     "lint-staged": {
         "**/*": "prettier --write --ignore-unknown"
