--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "prettier": "^2.2.1",
         "rollup": "^2.46.0",
         "rollup-plugin-copy": "^3.4.0",
+        "rollup-plugin-scss": "^2.6.1",
         "rollup-plugin-serve": "^1.1.0"
     },
     "files": [
