--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "rollup": "^2.46.0",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-scss": "^2.6.1",
-        "rollup-plugin-serve": "^1.1.0"
+        "rollup-plugin-serve": "^1.1.0",
+        "rollup-plugin-terser": "^7.0.2"
     },
     "files": [
         "dist"
@@ -32,8 +33,7 @@
     "module": "dist/blockly-playwright.esm.js",
     "browser": "dist/blockly-playwright.umd.js",
     "dependencies": {
-        "blockly": "^5.20210325.1",
-        "rollup-plugin-terser": "^7.0.2"
+        "blockly": "^5.20210325.1"
     },
     "lint-staged": {
         "**/*": "prettier --write --ignore-unknown"
