--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
         "@rollup/plugin-commonjs": "^18.0.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^11.2.1",
+        "autoprefixer": "^10.2.5",
+        "clipboard": "^2.0.8",
         "husky": "^6.0.0",
         "lint-staged": "^10.5.4",
         "lodash": "^4.17.21",
         "plop": "^2.7.4",
+        "postcss": "^8.3.0",
+        "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
         "rollup": "^2.46.0",
         "rollup-plugin-copy": "^3.4.0",
+        "rollup-plugin-postcss": "^4.0.0",
         "rollup-plugin-scss": "^2.6.1",
         "rollup-plugin-serve": "^1.1.0",
         "rollup-plugin-terser": "^7.0.2",
